--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,8 @@ ci:
   autoupdate_commit_msg: "chore: update pre-commit hooks"
   autofix_commit_msg: "style: pre-commit fixes"
 
+exclude: '^headers/.*$'
+
 repos:
 # Standard hooks
 - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -45,15 +47,6 @@ repos:
   hooks:
     - id: ruff
       args: ["--fix", "--show-fixes"]
-
-# Checking static types
-- repo: https://github.com/pre-commit/mirrors-mypy
-  rev: "v1.0.1"
-  hooks:
-    - id: mypy
-      files: "setup.py"
-      args: []
-      additional_dependencies: [types-setuptools]
 
 # Changes tabs to spaces
 - repo: https://github.com/Lucas-C/pre-commit-hooks
