--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -43,16 +43,10 @@ jobs:
       with:
         submodules: true
 
-    - name: Set up QEMU
-      if: runner.os == 'Linux'
-      uses: docker/setup-qemu-action@v2
-      with:
-        platforms: all
-
     - uses: pypa/cibuildwheel@v2.12.0
       env:
         # CIBW_ARCHS: auto64
-        CIBW_ARCHS_LINUX: x86_64 aarch64
+        CIBW_ARCHS_LINUX: x86_64
         CIBW_ARCHS_WINDOWS: AMD64 # ARM64
         CIBW_ARCHS_MACOS: x86_64 arm64
         CIBW_BEFORE_BUILD: pip install numpy fire --prefer-binary
