--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,7 +53,7 @@ repos:
   rev: v1.4.2
   hooks:
   - id: remove-tabs
-    exclude: ^(docs|Makefile)
+    exclude: ^(docs|Makefile|data/Makefile)
 
 # CMake formatting
 - repo: https://github.com/cheshirekow/cmake-format-precommit
