--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ ci:
   autoupdate_commit_msg: "chore: update pre-commit hooks"
   autofix_commit_msg: "style: pre-commit fixes"
 
-exclude: '(?x)^3rdparty/(Eigen/.*|boost/.*|dbg.h|doctest.h|rapidjson/.*|spdlog/.*)$'
+exclude: '(?x)^3rdparty/(Eigen/.*|boost/.*|dbg.h|doctest.h|nanoflann.hpp|rapidjson/.*|spdlog/.*)$'
 
 repos:
 # Standard hooks
